examples/test/testpolicy4596.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4596
  namespace: namespace322
spec:
  podSelector:
    matchLabels:
      key4: value43
      key30: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value38
          key42: value37
          key44: value33
      podSelector:
        matchLabels:
          key10: value14
          key17: value26
          key44: value22
